# SliceOps

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: funding.yaml
alembic/: env.py
alembic/versions/: 001_create_users_and_api_keys.py
app/: cli.py  config.py  main.py
app/api/: account_routes.py  admin_routes.py  auth_routes.py  dependencies.py  routes.py  webhook_routes.py
app/auth/: dependencies.py  jwt.py  models.py  oauth.py  service.py
app/billing/: service.py
app/db/: engine.py  models.py
app/middleware/: logging_config.py  request_id.py
app/models/: request.py  response.py
app/rate_limit/: dependencies.py  service.py
app/services/: bambu_studio.py  orca_slicer.py  prusa_slicer.py  slicer.py
app/storage/: temp_storage.py
app/store/: job_store.py
app/worker/: celery_app.py  tasks.py
config/: plans.yaml
docs/: README.internal.md  functionalities.md
docs/superpowers/plans/: 2026-04-14-accounts-billing.md  2026-04-14-open-source-simplification.md  2026-04-14-sliceops-api.md
docs/superpowers/specs/: 2026-04-14-accounts-billing-design.md  2026-04-14-open-source-simplification-design.md  2026-04-14-sliceops-api-design.md
tests/: conftest.py  test_account_routes.py  test_auth.py  test_auth_routes.py  test_bambu_studio.py  test_billing.py  test_config.py  test_config_new.py  test_job_store.py  test_jwt.py  test_key_validation.py  test_models.py  test_oauth.py  test_orca_slicer.py  test_prusa_slicer.py  test_rate_limit.py  test_request_id.py  test_routes.py  test_slicer.py  test_tasks.py  test_temp_storage.py  test_webhook.py
